trying to get facebox working/compiling correctly

--- a/config/database.yml
+++ b/config/database.yml
@@ -8,3 +8,8 @@ test:
   adapter: postgresql
   min_messages: warning
 
+production:
+  adapter: sqlite3
+  database: db/production.sqlite3
+  pool: 5
+  timeout: 5000
