--- a/public/assets/manifest.yml
+++ b/public/assets/manifest.yml
@@ -1,6 +1,7 @@
 --- 
+flag_logo.png: flag_logo-457c646e7d4a3df26d63dd5eceaae6d1.png
 rails.png: rails-bd9ad5a560b5a3a7be0808c5cd76a798.png
 jquery-ui.min.js: jquery-ui-7e33882a28fc84ad0e0e47e46cbf901c.min.js
 jquery.min.js: jquery-8a50feed8d29566738ad005e19fe1c2d.min.js
 application.js: application-b76c350804d16c4c5abb39e17fca57f5.js
-application.css: application-834de3be84da0980961f4421b44eba7b.css
+application.css: application-d6d868c4813ffe6ec693f37e143c3d57.css
